# SHOPORA-E-Commerce-Fullstack-Web-App-Django

./: .gitignore  package-lock.json  pyproject.toml  ruff.toml
accounts/: managers.py  models.py  views.py
cart/models/: cart.py  cart_item.py
catalog/: admin.py  context_processors.py  urls.py  views.py
catalog/management/commands/: seed_catalog.py
catalog/models/: __init__.py  category.py  product.py  product_image.py
catalog/templates/catalog/: product_list.html
catalog/templates/catalog/components/: product_filters.html  products_cart.html
catalog/templates/catalog/partials/: product_gird.html
config/: settings.py  urls.py
inventory/: models.py
notes/: Structure DB.txt
orders/models/: __init__.py  order.py  order_items.py  shipping_address.py
payment/: models.py
payment/migrations/: 0001_initial.py
static/css/: input.css  output.css
static/js/: alpine.min.js
templates/: base.html
templates/components/: header.html  navbar.html
