[project]
name = "shopora"
version = "0.1.0"
description = "Single Vendor E-Commerce Web Application"
authors = [
    {name = "Hiroshan"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "django (>=6.0,<7.0)",
    "pillow (>=12.1.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "django-browser-reload (>=1.21.0,<2.0.0)",
    "djlint (>=1.36.4,<2.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "faker (>=40.1.0,<41.0.0)"
]
